--- a/app/views/luo.html
+++ b/app/views/luo.html
@@ -1,15 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Muokkaa PJ Vaalit</h1>
+  <h1>Luo uusi äänestys</h1>
 
   <form>
     <div class="form-group">
       <label>Nimi</label>
-      <input class="form-control" value="PJ Vaalit" type="text">
+      <input class="form-control" value="" type="text">
     </div>
     <div class="form-group">
       <label>Päättyy</label>
-      <input class="form-control" value="11.11.2011" type="text">
+      <input class="form-control" value="" type="text">
     </div>
     <div class="checkbox">
       <label>
@@ -19,7 +19,7 @@
     </div>
     <div class="form-group">
       <label>Ehdokkaat</label>
-      <input class="form-control" value="11.11.2011" type="text">
+      <input class="form-control" value="" type="text">
     </div>
     
     <div class="form-group">
