--- a/app/views/base.html
+++ b/app/views/base.html
@@ -7,7 +7,7 @@
 
     <title>
       {% block title %}
-        Tietokantasovellus
+        Tietokantasovellus: Äänestys
       {% endblock %}
     </title>
 
@@ -40,6 +40,10 @@
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
             <li><a href="{{base_path}}">Etusivu</a></li>
+            <li><a href="{{base_path}}/luo">Uusi Äänestys</a></li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Kirjaudu sisään</a></li>
           </ul>
         </div>
       </div>
