--- a/app/views/kayttaja/kirjaudu.html
+++ b/app/views/kayttaja/kirjaudu.html
@@ -1,17 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Kirjaudu sisään</h1>
+  
+  <p>Uusi käyttäjä? Luo tunnukset <a href="{{base_path}}/kayttaja/uusikayttaja">tästä!</a></p>
 
-  <form>
+  <form method="post" action="{{base_path}}/kayttaja/kirjaudu">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
-      <input class="form-control" type="text">
+      <input name="nimi" class="form-control" type="text">
     </div>
 
     <div class="form-group">
       <label>Salasana</label>
-      <input class="form-control" type="password">
+      <input name="salasana" class="form-control" type="password">
     </div>
+      
+    <p>
+        <font color="red">{{virhe}}</font>
+    </p>
 
     <button type="submit" class="btn btn-info">Kirjaudu sisään</button>
   </form>
