--- a/app/views/kayttaja/uusikayttaja.html
+++ b/app/views/kayttaja/uusikayttaja.html
@@ -1,21 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>Kirjaudu sisään</h1>
+  <h1>Uusi käyttäjä</h1>
+  
+  {% if virheet %}
+    <div class="alert alert-danger">
+      <ul>
+        {% for virhe in virheet %}
+          <li>{{virhe}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
 
-  <form>
+  <form method="post" action="{{base_path}}/kayttaja/uusikayttaja">
     <div class="form-group">
       <label>Käyttäjätunnus</label>
-      <input class="form-control" type="text">
+      <input name="nimi" value="{{attributes.nimi}}" class="form-control" type="text">
     </div>
 
     <div class="form-group">
       <label>Salasana</label>
-      <input class="form-control" type="password">
+      <input name="salasana" value="{{attributes.salasana}}" class="form-control" type="text">
     </div>
       
     <div class="form-group">
       <label>Salasana uudelleen</label>
-      <input class="form-control" type="password">
+      <input name="salasana2" class="form-control" type="text">
+    </div>
+      
+    <div class="form-group">
+      <label>Kontrolli</label>
+      <input name="lisenssi" class="form-control" type="password">
     </div>
 
     <button type="submit" class="btn btn-success">Luo käyttäjä</button>
