--- a/app/views/luo.html
+++ b/app/views/luo.html
@@ -2,25 +2,30 @@
 {% block content %}
   <h1>Luo uusi äänestys</h1>
 
-  <form>
+  <form method="post" action="{{base_path}}/luo">
     <div class="form-group">
       <label>Nimi</label>
-      <input class="form-control" value="" type="text">
+      <input name="nimi" class="form-control" value="" type="text">
+    </div>
+    <div class="form-group">
+      <label>Luonut</label>
+      <input name="luonut" class="form-control" value="{{kayttaja.id}}" type="hidden">
+    </div>
+    <div class="form-group">
+      <label>Kuvaus</label>
+      <textarea name="kuvaus" class="form-control" rows="5"></textarea>
     </div>
     <div class="form-group">
       <label>Päättyy</label>
-      <input class="form-control" value="" type="text">
+      <input name="paattyy" class="form-control" value="" type="date">
     </div>
-    <div class="checkbox">
-      <label>
-        <input type="checkbox">
-        Kirjautuminen pakollista
-      </label>
+      <label>Vaaditaanko kirjautuminen</label>
+      <div class="checkbox">
+        <input type="radio" name="kirjautuminen" value="True" checked> Kyllä
+        <br>
+        <input type="radio" name="kirjautuminen" value="False"> Ei
     </div>
-    <div class="form-group">
-      <label>Ehdokkaat</label>
-      <input class="form-control" value="" type="text">
-    </div>
+    
     
     <div class="form-group">
       <button type="submit" class="btn btn-primary">Tallenna</button>
