--- a/app/views/muokkaa.html
+++ b/app/views/muokkaa.html
@@ -2,20 +2,31 @@
 {% block content %}
   <h1>Muokkaa PJ Vaalit</h1>
 
-  <form>
+  <form method="post" action="{{base_path}}/muokkaa/{{aanestys.id}}">
     <div class="form-group">
       <label>Nimi</label>
-      <input class="form-control" value="PJ Vaalit" type="text">
+      <input name="nimi" class="form-control" value="{{aanestys.nimi}}" type="text">
     </div>
     <div class="form-group">
       <label>Päättyy</label>
-      <input class="form-control" value="11.11.2011" type="text">
+      <input name="paattyy" class="form-control" value="{{aanestys.paattyy}}" type="date">
     </div>
+    <div class="form-group">
+      <label>Kuvaus</label>
+      <textarea name="kuvaus" class="form-control" rows="5">{{aanestys.kuvaus}}</textarea>
+    </div>
+    <label>Vaaditaanko kirjautuminen</label>
     <div class="checkbox">
-      <label>
-        <input type="checkbox">
-        Kirjautuminen pakollista
-      </label>
+        
+        {% if aanestys.kirjautuminen %}
+        <input type="radio" name="kirjautuminen" value="True" checked> Kyllä
+        <br>
+        <input type="radio" name="kirjautuminen" value="False"> Ei
+        {% else %}
+        <input type="radio" name="kirjautuminen" value="True" > Kyllä
+        <br>
+        <input type="radio" name="kirjautuminen" value="False" checked> Ei
+        {% endif %}
     </div>
     
     <div class="form-group">
