--- a/app/views/tiedot.html
+++ b/app/views/tiedot.html
@@ -1,29 +1,63 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>PJ Vaalit</h1>
+  <h1>{{aanestys.nimi}}</h1>
   
-  <p>Näissä vaaleissa valitaan uusi puheenjohtaja</p>
+  <p><i>{{viesti}}</i></p>
+  
+  <p>{{aanestys.kuvaus}}</p>
+  {% if kayttaja.id == aanestys.luonut %}
+  <p><a href="{{base_path}}/muokkaa/{{aanestys.id}}" class="btn btn-warning">Muokkaa</a></p>
+  {% endif %}
+  
+  {% if date(aanestys.paattyy) >= date() %}
+  <p><b>Viimeinen äänestyspäivä: {{aanestys.paattyy}}</b></p>
+  {% else %}
+  <p><label class="label label-danger">Äänestys on päättynyt</label></p>
+  {% endif %}
+  
 
   <table class="table table-striped table-bordered">
     <thead>
       <tr>
         <th>Ehdokas</th>
         <th>Ääniä</th>
+        {% if (kayttaja or not aanestys.kirjautuminen) and 
+        date(aanestys.paattyy) >= date()%}
         <th>Äänestä</th>
+        {% endif %}
       </tr>
     </thead>
 
     <tbody>
+    {% for ehdokas in aanestys.ehdokkaat %}
       <tr>
-        <td>Seppo</td>
-        <td>2</td>
-        <td><label class="label label-success">Äänestä</label></td>
+        <td>{{ehdokas.nimi}}</td>
+        <td>{{ehdokas.aania}}</td>
+        {% if not aanestys.kirjautuminen and date(aanestys.paattyy) >= date()%}
+          <td><a href="{{base_path}}/aanestakirjautumatta/{{aanestys.id}}/{{ehdokas.id}}" class="btn btn-success">Äänestä</a></td>
+        {% elseif kayttaja and aanestys.kirjautuminen and date(aanestys.paattyy) >= date() %}
+          <td><a href="{{base_path}}/aanestakirjautuneena/{{aanestys.id}}/{{ehdokas.id}}" class="btn btn-success">Äänestä</a></td>
+        {% endif %}
+        {% if kayttaja.id == aanestys.luonut %}
+        <td><a href="{{base_path}}/poistaehdokas/{{aanestys.id}}/{{ehdokas.id}}" class="btn btn-danger">Poista ehdokas</a></td>
+        {% endif %}
       </tr>
-      <tr>
-        <td>Jyrki</td>
-        <td>2</td>
-        <td><label class="label label-success">X</label></td>
-      </tr>
+      
+    {% endfor %}
     </tbody>
   </table>
+  
+  <br>
+  {% if kayttaja.id == aanestys.luonut %}
+  <form method="post" action="{{base_path}}/tiedot/{{aanestys.id}}">
+    <div class="form-group">
+      <label>Nimi</label>
+      <input name="nimi" class="form-control" value="" type="text">
+    </div>
+    
+    <div class="form-group">
+      <button type="submit" class="btn btn-primary">Lisää ehdokas</button>
+    </div>
+  </form>
+  {% endif %}
 {% endblock %}
