--- a/app/views/kayttaja/uusikayttaja.html
+++ b/app/views/kayttaja/uusikayttaja.html
@@ -25,12 +25,12 @@
       
     <div class="form-group">
       <label>Salasana uudelleen</label>
-      <input name="salasana2" class="form-control" type="text">
+      <input name="salasana2" value="" class="form-control" type="text">
     </div>
       
     <div class="form-group">
       <label>Kontrolli</label>
-      <input name="lisenssi" class="form-control" type="password">
+      <input name="kontrolli" class="form-control" type="password">
     </div>
 
     <button type="submit" class="btn btn-success">Luo käyttäjä</button>
