--- a/app/views/luo.html
+++ b/app/views/luo.html
@@ -1,29 +1,44 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Luo uusi äänestys</h1>
+  
+  {% if virheet %}
+    <div class="alert alert-danger">
+      <ul>
+        {% for virhe in virheet %}
+          <li>{{virhe}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
 
   <form method="post" action="{{base_path}}/luo">
     <div class="form-group">
       <label>Nimi</label>
-      <input name="nimi" class="form-control" value="" type="text">
+      <input name="nimi" class="form-control" value="{{attributes.nimi}}" type="text">
     </div>
     <div class="form-group">
-      <label>Luonut</label>
       <input name="luonut" class="form-control" value="{{kayttaja.id}}" type="hidden">
     </div>
     <div class="form-group">
       <label>Kuvaus</label>
-      <textarea name="kuvaus" class="form-control" rows="5"></textarea>
+      <textarea name="kuvaus" class="form-control" rows="5">{{attributes.kuvaus}}</textarea>
     </div>
     <div class="form-group">
-      <label>Päättyy</label>
-      <input name="paattyy" class="form-control" value="" type="date">
+      <label>Päättyy (pp.kk.vvvv)</label>
+      <input name="paattyy" class="form-control" value="{{attributes.paattyy}}" type="text">
     </div>
       <label>Vaaditaanko kirjautuminen</label>
       <div class="checkbox">
+        {% if not attributes.kirjautuminen %}
         <input type="radio" name="kirjautuminen" value="True" checked> Kyllä
         <br>
         <input type="radio" name="kirjautuminen" value="False"> Ei
+        {% else %}
+        <input type="radio" name="kirjautuminen" value="True" > Kyllä
+        <br>
+        <input type="radio" name="kirjautuminen" value="False" checked> Ei
+        {% endif %}
     </div>
     
     
