--- a/app/views/muokkaa.html
+++ b/app/views/muokkaa.html
@@ -1,6 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>Muokkaa PJ Vaalit</h1>
+  
+  {% if virheet %}
+    <div class="alert alert-danger">
+      <ul>
+        {% for virhe in virheet %}
+          <li>{{virhe}}</li>
+        {% endfor %}
+      </ul>
+    </div>
+  {% endif %}
 
   <form method="post" action="{{base_path}}/muokkaa/{{aanestys.id}}">
     <div class="form-group">
@@ -8,8 +18,8 @@
       <input name="nimi" class="form-control" value="{{aanestys.nimi}}" type="text">
     </div>
     <div class="form-group">
-      <label>Päättyy</label>
-      <input name="paattyy" class="form-control" value="{{aanestys.paattyy}}" type="date">
+      <label>Päättyy (pp.kk.vvvv)</label>
+      <input name="paattyy" class="form-control" value="{{aanestys.paattyy}}" type="text">
     </div>
     <div class="form-group">
       <label>Kuvaus</label>
